manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-app
  labels:
    app: hw-app
spec:
  selector:
    app: hw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
