manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-app-ingress
spec:
  rules:
    - host: hw-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw-app
                port:
                  number: 80
